# ChangeLog for net-zope/externaleditor
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/externaleditor/ChangeLog,v 1.7 2004/06/25 01:20:09 agriffis Exp $

*externaleditor-0.7-r1 (22 Jan 2004)

  22 Jan 2004; Heinrich Wendel <lanius@gentoo.org>
  externaleditor-0.7-r1.ebuild:
  separate zopeedit as extra ebuild

  10 Oct 2003; Robin H. Johnson <robbat2@gentoo.org>
  externaleditor-0.7.ebuild:
  fix RDEPEND

*externaleditor-0.7 (10 Oct 2003)

  10 Oct 2003; Robin H. Johnson <robbat2@gentoo.org>
  externaleditor-0.7.ebuild:
  version bump and major revision of ebuild

  12 Jun 2003; <msterret@gentoo.org> externaleditor-0.5.ebuild:
  fix Header

*externaleditor-0.5 (29 Mar 2003)

  03 Apr 2003; Jason Shoemaker <kutsuya@gentoo.org> externaleditor-0.5.ebuild:
  ~x86 -> x86

  29 Mar 2003; Jason Shoemaker <kutsuya@gentoo.org> externaleditor-0.5.ebuild:
  Initial import. #16307
