@@ -1,8 +1,6 @@
-MD5 d7175f2cc3a9089c5742b76b2c4f3393 externaleditor-0.5.ebuild 867
-MD5 cc5e3c0124524f1c0e1002ff4d93cf3f externaleditor-0.7.ebuild 1543
-MD5 a2264a33df081e336dc19f61ed67ce90 externaleditor-0.7-r1.ebuild 660
-MD5 921d812f6a1272d0194f444e18b64898 ChangeLog 950
+MD5 67c01acb43f3e47118f8928cba2171ad externaleditor-0.8.ebuild 1554
+MD5 79d11cbde503391807803dc54b6c2400 externaleditor-0.7-r1.ebuild 667
+MD5 baf844ebbedbe3486c30a08b145f5abf ChangeLog 1201
 MD5 7890d88c5c6d189fbe6b187a3ebb6532 metadata.xml 161
-MD5 f776cc08e81cabfdf81c550fbdebf042 files/digest-externaleditor-0.5 129
-MD5 d384ad8ba1ef44821fd6d4bc7d7306a3 files/digest-externaleditor-0.7 130
+MD5 9c96522e61b418eae5359dc95e00f956 files/digest-externaleditor-0.8 134
 MD5 e6e71f5b187c7572e8ed4778db273374 files/digest-externaleditor-0.7-r1 66
