@@ -1,2 +1,0 @@
-MD5 aa8c9e303fff38b03d9938f37d69acc7 ExternalEditor-0.5.tgz 16493
-MD5 9859af25c7192d5ffb2df11befd8502f zopeedit-0.5-src.tgz 7568
