@@ -1,2 +1,0 @@
-MD5 1dac15db90bb3c320955c114f2053963 ExternalEditor-0.7.tgz 18970
-MD5 87fe890a7f7c2506db16142bc4789b38 zopeedit-0.7-src.tgz 22798
