@@ -1,0 +1,2 @@
+MD5 c7db1275c4b5097e9719d4ac4e3309e9 ExternalEditor-0.8-src.tgz 39127
+MD5 8ecc65067d32ac961476f924fa3e8b5b zopeedit-0.8-src.tgz 31830
