@@ -1,6 +1,13 @@
 # ChangeLog for net-zope/externaleditor
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/externaleditor/ChangeLog,v 1.7 2004/06/25 01:20:09 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/externaleditor/ChangeLog,v 1.8 2004/07/27 20:22:17 batlogg Exp $
+
+*externaleditor-0.8 (27 Jul 2004)
+
+  27 Jul 2004; Jodok Batlogg <batlogg@gentoo.org>; -externaleditor-0.5.ebuild,
+  externaleditor-0.7-r1.ebuild, -externaleditor-0.7.ebuild,
+  +externaleditor-0.8.ebuild:
+  version bump, removed old ebuild, added IUSE
 
 *externaleditor-0.7-r1 (22 Jan 2004)
 
